--- a/utils/render-template/pagination.html
+++ b/utils/render-template/pagination.html
@@ -2,29 +2,32 @@
     <ul>
         {{#paginate pagination type="first"}}
             <li {{#if disabled}}class="li-paginate" {{/if}} style="float:left;"class="li-paginate" >
-                <a  href="#" onclick="return pagination({{json n}})"><<</a>
+                {{!-- <a  href="?{{../query}}p={{n}}"><<</a> --}}
+                 <a href="#"onclick="return pagination({{json n}},{{json ../cart}})"><<</a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="previous"}}
             <li {{#if disabled}}class="li-paginate" {{/if}}style="float:left;" class="li-paginate">
-                <a  href="#" onclick="return pagination({{json n}})"><</a>
+                {{!-- <a href="?{{../query}}p={{n}}"><</a> --}}
+                <a  href="#"onclick="return pagination({{json n}},{{json ../cart}})"><</a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="middle" limit="5"}}
             <li {{#if active}} class=" activate" {{/if}} style="float:left;" class="li-paginate" >
-                <a  href="#" onclick="return pagination({{json n}})">{{n}}</a>
-                
+                {{!-- <a href="?{{../query}}p={{n}}">{{n}}</a> --}}
+                <a  href="#"onclick="return pagination({{json n}},{{json ../cart}})">{{n}}</a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="next"}}
             <li {{#if disabled}}class="li-paginate"   {{/if}}style="float:left;" class="li-paginate">
-                <a  href="#" onclick="return pagination({{json n}})">></a>
-               
+                {{!-- <a href="?{{../query}}p={{n}}">> </a> --}}
+                <a  href="#"onclick="return pagination({{json n}},{{json ../cart}})">></a>
             </li>
         {{/paginate}}
         {{#paginate pagination type="last"}}
             <li {{#if disabled}}class="li-paginate"  {{/if}}style="float:left;"class="li-paginate">
-                <a  href="#" onclick="return pagination({{json n}})">>></a>
+                {{!-- <a  href="?{{../query}}p={{n}}">>></a> --}}
+                <a  href="#" onclick="return pagination({{json n}},{{json ../cart}})">>></a>
             </li>
         {{/paginate}}
     </ul>
